Correction de fautes d'orthographes dans les notes et ajout d'une information

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ transition:'linear',
         <section>
           <img src="images/explication_ellipse.png" alt="Un ellipse est une zone o&#xF9; la valeur qu'elle repr&#xE9;sente peut &#xEA;tre"/>
           <aside class="notes">
-            <p>Un ellipse</p>
+            <p>Une ellipse</p>
             <ul>
               <li>Represente une zone o&#xF9; le ratio entre les deux rapports peut etre</li>
               <li>Si les rapports &#xE9;taient exacts : Point.</li>
@@ -179,7 +179,7 @@ transition:'linear',
             <p>Ligne concordia</p>
             <ul>
               <li>Represente le temps</li>
-              <li>Plusieurs sortes : Whetherill/<!-- Se renseigner --></li>
+              <li>Plusieurs sortes : Whetherill/Tera-Wassaburg</li>
             </ul>
           </aside>
         </section>
@@ -450,7 +450,7 @@ dans le format qu'ils souhaitent</p>
         <section>
           <img src="images/travail_svg.png" alt="Mon travail sur le convertisseur SVG est de trouver les propri&#xE9;t&#xE9;s graphiques de JavaFX et de les appliquer au SVG"/>
           <aside class="notes">
-            <p>MON JOB : Trouver les definitions d'element de base manquant au convertisseur ET corriger celle qui existe deja</p>
+            <p>MON JOB : Trouver les definitions d'elements de base manquant au convertisseur ET corriger celle qui existe deja</p>
             <p>documentation + essais =&gt; QUELLE PROPRIETE GRAPHIQUES -&gt; SVG</p>
             <p>Propiete trouvee : Commenter le before after</p>
           </aside>
@@ -668,7 +668,7 @@ class SimplePane extends VBox{
           <h3>R&#xE9;aliser plusieurs t&#xE2;ches dans un projet</h3>
           <p>Le besoin de d&#xE9;velopper &#xE0; plusieurs vitesses.</p>
           <aside class="notes">
-            <p>Suivre un projet &#xE0; plusieurs vitesse</p>
+            <p>Suivre un projet &#xE0; plusieurs vitesses</p>
             <ul>
               <li>Nouvelle librairie</li>
               <li>Petites fonctions &#xE0; implementer</li>
