Diapositive sur le reste du projet et fin du diaporama ajoute

--- a/index.html
+++ b/index.html
@@ -556,6 +556,19 @@ class SimplePane extends VBox{
             <p>Commente la fenetre</p>
           </aside>
         </section>
+        <!-- Travail sur GitHub -->
+        <section>
+          <h3>Un mot de mon r&#xF4;le sur GitHub</h3>
+          <p>Toutes les autres t&#xE2;ches que j'ai aussi eu &#xE0; accomplir</p>
+          <aside class="notes">
+            <p>Mot sur mon r&#xF4;le sur GitHub</p>
+            <ul>
+              <li>A partir deuxieme moitier projet : Devenu publique</li>
+              <li>Discuter avec les utilisateurs dans un anglais professionel (Resoudre problemes/Parler du futur)</li>
+              <li>Repondre aux courtes demandes des utilisateurs</li>
+            </ul>
+          </aside>
+        </section>
         <!-- Analyse du retour sur experience -->
         <section>
           <h2>Retour<em>s</em> sur experience</h2>
@@ -695,6 +708,26 @@ class SimplePane extends VBox{
             <p>Doc + test c'est dur</p>
             <p>Accepter de perdres du temps</p>
           </aside>
+        </section>
+        <section>
+          <h3>Le principe KISS</h3>
+          <q>Keep it simple, Stupid !</q>
+        </section>
+        <section>
+          <q>"Perfect is the ennemy of good"</q>
+          <p>
+            <small>- Jim Bowring</small>
+          </p>
+        </section>
+        <section>
+          <h3>Geochronologie</h3>
+        </section>
+        <section>
+          <h3>Marcher du travail am&#xE9;ricain</h3>
+          <p>Les differences de mentalit&#xE9; avec la France</p>
+        </section>
+        <section>
+          <h2>Conclusion</h2>
         </section>
       </div>
     </div>
