Titres de sections crees

--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@ transition:'linear',
         </section>
         <!-- Introduction -->
         <section>
+          <h2>Introduction</h2>
+        </section>
+        <section>
           <section>
             <img src="images/calendrier.png" alt="Un calendrier"/>
           </section>
@@ -93,6 +96,9 @@ transition:'linear',
           </aside>
         </section>
         <!-- Explication du contexte -->
+        <section>
+          <h2>La méthode des géochronologistes</h2>
+        </section>
         <section>
           <img src="images/volcan.png"/>
           <aside class="notes">
@@ -322,6 +328,9 @@ transition:'linear',
         </section>
         <!-- Planning -->
         <section>
+          <h2>Planning</h2>
+        </section>
+        <section>
           <img src="images/deroulementstage.png" alt="Deroulement du stage"/>
           <aside class="notes">
             <ul>
@@ -346,6 +355,9 @@ Avant :</p>
           </aside>
         </section>
         <!--Fonctionnalités -->
+        <section>
+          <h2>Les fonctionalit&#xE9; que j'ai developp&#xE9;</h2>
+        </section>
         <!-- Column Selector View -->
         <section>
           <img src="images/columnselectorview.png" alt="Un Column Selector View"/>
