Refactorisation de la hierarchie de la partie retour

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ transition:'linear',
         </section>
         <!-- Explication du contexte -->
         <section>
-          <h2>La méthode des géochronologistes</h2>
+          <h2>La m&#xE9;thode des g&#xE9;ochronologistes</h2>
         </section>
         <section>
           <img src="images/volcan.png"/>
@@ -600,7 +600,10 @@ class SimplePane extends VBox{
         </section>
         <!-- Technique -->
         <section>
-          <h3>JavaFX</h3>
+          <h3>Apports techniques</h3>
+        </section>
+        <section>
+          <h4>JavaFX</h4>
           <p>Une excelente, mais encore un peu jeune, librairie graphique</p>
           <aside class="notes">
             <p>Librarie JavaFX</p>
@@ -613,7 +616,7 @@ class SimplePane extends VBox{
           </aside>
         </section>
         <section>
-          <h3>Java 8 et les fonctions lambdas</h3>
+          <h4>Java 8 et les fonctions lambdas</h4>
           <p>Une introduction &#xE0; la programmation fonctionelle</p>
           <aside class="notes">
             <p>Java, les fonction lambda et la programmation fonctionelle</p>
@@ -622,7 +625,7 @@ class SimplePane extends VBox{
           </aside>
         </section>
         <section>
-          <h3>Autres apports techniques</h3>
+          <h4>Autres apports techniques</h4>
           <ul>
             <li>SVG</li>
             <li>Maven</li>
@@ -642,7 +645,7 @@ class SimplePane extends VBox{
           </p>
         </section>
         <section>
-          <h3>Git !</h3>
+          <h4>Git !</h4>
           <p>Un des meilleurs syst&#xE8;mes de versionnage de fichier au monde !</p>
           <aside class="notes">
             <p>Mon pr&#xE9;f&#xE9;r&#xE9; : GIT (Con&#xE7;u pour maintenir Linux &#xE0; l'origine)</p>
@@ -655,7 +658,7 @@ class SimplePane extends VBox{
           </aside>
         </section>
         <section>
-          <h3>GitHub !</h3>
+          <h4>GitHub !</h4>
           <p>Une des meilleurs site web de collaboration entre developpeurs (et autres) bas&#xE9; sur Git</p>
           <aside class="notes">
             <p>Github! (3.5 millions d'utilisateurs | 10 millions de projets)</p>
@@ -671,7 +674,10 @@ class SimplePane extends VBox{
         </section>
         <!-- Organisation -->
         <section>
-          <h3>GitHub : Un precieux outil d'organisation pour l'&#xE9;quipe</h3>
+          <h3>Apports organisationnels</h3>
+        </section>
+        <section>
+          <h4>GitHub : Un precieux outil d'organisation pour l'&#xE9;quipe</h4>
           <img src="images/issuetracker_github.png" alt="Description de l'issue tracker. Il permet de creer ce que l'on appelle des issues, d'en discuter avec les utilisateurs, de les referencer dans les commits o&#xF9; l'on fait des modifications les concernant. De cette fa&#xE7;on on suit l'avancement du projet"/>
           <aside class="notes">
             <p>Organisation avec Github</p>
@@ -690,7 +696,7 @@ class SimplePane extends VBox{
           </aside>
         </section>
         <section>
-          <h3>R&#xE9;aliser plusieurs t&#xE2;ches dans un projet</h3>
+          <h4>R&#xE9;aliser plusieurs t&#xE2;ches dans un projet</h4>
           <p>Le besoin de d&#xE9;velopper &#xE0; plusieurs vitesses.</p>
           <aside class="notes">
             <p>Suivre un projet &#xE0; plusieurs vitesses</p>
@@ -702,7 +708,7 @@ class SimplePane extends VBox{
           </aside>
         </section>
         <section>
-          <h3>G&#xEA;rer plusieurs intensit&#xE9;s de developpement</h3>
+          <h4>G&#xEA;rer plusieurs intensit&#xE9;s de developpement</h4>
           <ul>
             <li>Periodes intenses</li>
             <li>Periodes marathons</li>
@@ -714,7 +720,7 @@ class SimplePane extends VBox{
           </aside>
         </section>
         <section>
-          <h3>Documentation et tests</h3>
+          <h4>Documentation et tests</h4>
           <p>Une question de volont&#xE9;</p>
           <aside class="notes">
             <p>Doc + test c'est dur</p>
@@ -722,7 +728,7 @@ class SimplePane extends VBox{
           </aside>
         </section>
         <section>
-          <h3>Le principe KISS</h3>
+          <h4>Le principe KISS</h4>
           <q>Keep it simple, Stupid !</q>
         </section>
         <section>
@@ -730,6 +736,9 @@ class SimplePane extends VBox{
           <p>
             <small>- Jim Bowring</small>
           </p>
+        </section>
+        <section>
+          <h3>Apports en Culture G&#xE9;n&#xE9;rale</h3>
         </section>
         <section>
           <h3>Geochronologie</h3>
