Les images ont maintenant la bonne taille

--- a/index.html
+++ b/index.html
@@ -49,16 +49,16 @@ transition:'linear',
         <!-- Introduction -->
         <section>
           <section>
-            <img src="images/calendrier.png" alt="Un calendrier"/>
+            <img height="900" src="images/calendrier.png" alt="Un calendrier"/>
           </section>
           <section>
-            <img src="images/calendrier_vie.png" alt="Un calendrier"/>
+            <img height="900" src="images/calendrier_vie.png" alt="Un calendrier"/>
           </section>
           <section>
-            <img src="images/calendrier_animal.png" alt="Un calendrier"/>
+            <img height="900" src="images/calendrier_animal.png" alt="Un calendrier"/>
           </section>
           <section>
-            <img src="images/calendrier_humain.png" alt="Un calendrier"/>
+            <img height="900" src="images/calendrier_humain.png" alt="Un calendrier"/>
           </section>
           <section>
             <p>Le travail des g&#xE9;ochronologistes est de determiner l'&#xE2;ge d'objets terrestres</p>
@@ -82,7 +82,7 @@ transition:'linear',
         </section>
         <section>
           <h2>Le stage</h2>
-          <img src="images/stage.png" alt="Description de mon stage"/>
+          <img height="900" src="images/stage.png" alt="Description de mon stage"/>
           <aside class="notes">
             <ul>
               <li>Projet Topsoil : G&#xE9;n&#xE8;rer des sch&#xE9;mas pour g&#xE9;ochronologistes</li>
@@ -94,7 +94,7 @@ transition:'linear',
         </section>
         <!-- Explication du contexte -->
         <section>
-          <img src="images/volcan.png"/>
+          <img height="900" src="images/volcan.png"/>
           <aside class="notes">
             <ul>
               <li>Eruption de volcan.</li>
@@ -106,7 +106,7 @@ transition:'linear',
           </aside>
         </section>
         <section>
-          <img src="images/zircon_uranium.png"/>
+          <img height="900" src="images/zircon_uranium.png"/>
           <aside class="notes">
             <p>Zircon :</p>
             <ul>
@@ -116,7 +116,7 @@ transition:'linear',
           </aside>
         </section>
         <section>
-          <img src="images/zircon_uraniumplomb.png"/>
+          <img height="900" src="images/zircon_uraniumplomb.png"/>
           <aside class="notes">
             <p>Temps passe</p>
             <ul>
@@ -126,7 +126,7 @@ transition:'linear',
           </aside>
         </section>
         <section>
-          <img src="images/zircon_tauxuranium.png" alt="Le taux d'uranium permet de determiner la date"/>
+          <img height="900" src="images/zircon_tauxuranium.png" alt="Le taux d'uranium permet de determiner la date"/>
           <aside class="notes">
             <p>Scientifiques deterrent les zircons. calculent le rapport entre plomb et uranium.</p>
             <p>=&gt; AGE DE LA COUCHE TERRESTRE</p>
@@ -152,7 +152,7 @@ transition:'linear',
           </aside>
         </section>
         <section>
-          <img src="images/graphique.png" alt="Un exemple de graphique"/>
+          <img height="900" src="images/graphique.png" alt="Un exemple de graphique"/>
           <aside class="notes">
             <p>Pour l'instant, permet de tracer CE genre de schema</p>
             <ul>
@@ -162,7 +162,7 @@ transition:'linear',
           </aside>
         </section>
         <section>
-          <img src="images/explication_ellipse.png" alt="Un ellipse est une zone o&#xF9; la valeur qu'elle repr&#xE9;sente peut &#xEA;tre"/>
+          <img height="900" src="images/explication_ellipse.png" alt="Un ellipse est une zone o&#xF9; la valeur qu'elle repr&#xE9;sente peut &#xEA;tre"/>
           <aside class="notes">
             <p>Une ellipse</p>
             <ul>
@@ -174,7 +174,7 @@ transition:'linear',
           </aside>
         </section>
         <section>
-          <img src="images/graphique_concordia.png" alt="Un graphique avec la ligne concordia"/>
+          <img height="900" src="images/graphique_concordia.png" alt="Un graphique avec la ligne concordia"/>
           <aside class="notes">
             <p>Ligne concordia</p>
             <ul>
@@ -348,7 +348,7 @@ Avant :</p>
         <!--Fonctionnalités -->
         <!-- Column Selector View -->
         <section>
-          <img src="images/columnselectorview.png" alt="Un Column Selector View"/>
+          <img height="900" src="images/columnselectorview.png" alt="Un Column Selector View"/>
           <aside class="notes">
             <h1>Le ColumnSelectorView</h1>
             <ul>
@@ -358,7 +358,7 @@ Avant :</p>
           </aside>
         </section>
         <section>
-          <img src="images/fonctionnementgraphique.png" alt="Un graphique passe des records &#xE0; un graphique. Ceux-ci se retrouvent convertis par un Converter en ErrorEllipse"/>
+          <img height="900" src="images/fonctionnementgraphique.png" alt="Un graphique passe des records &#xE0; un graphique. Ceux-ci se retrouvent convertis par un Converter en ErrorEllipse"/>
           <aside class="notes">
             <p>Comment est-ce que le columnselectordialog dit au graphique &#xE0; quelle colonnes correspondent &#xE0; quelles donn&#xE9;es</p>
             <ul>
@@ -370,7 +370,7 @@ Avant :</p>
           </aside>
         </section>
         <section>
-          <img src="images/csv_previousfonction.png" alt="Le fonctionnement pr&#xE9;c&#xE9;dant du Column Selector View. Il n'a la responsabilit&#xE9; que de choisir les colonnes"/>
+          <img height="900" src="images/csv_previousfonction.png" alt="Le fonctionnement pr&#xE9;c&#xE9;dant du Column Selector View. Il n'a la responsabilit&#xE9; que de choisir les colonnes"/>
           <aside class="notes">
             <p>Au depart j'avais con&#xE7;u une interface qui donnait la possibilit&#xE9; &#xE0; n'importe quel objet de generer un graphique</p>
             <p>Classe adopt&#xE9;e par le tableau</p>
@@ -390,7 +390,7 @@ Avant :</p>
           </aside>
         </section>
         <section>
-          <img src="images/csv_currentfunction.png" alt="Le nouveau fonctionement du ColumnSelectorView"/>
+          <img height="900" src="images/csv_currentfunction.png" alt="Le nouveau fonctionement du ColumnSelectorView"/>
           <aside class="notes">
             <ul>
               <li>CSV transform&#xE9; en dialog</li>
@@ -426,7 +426,7 @@ dans le format qu'ils souhaitent</p>
           </aside>
         </section>
         <section>
-          <img src="images/hierarchiejavafx.png" alt="La hierarchie des objets dans JavaFX"/>
+          <img height="900" src="images/hierarchiejavafx.png" alt="La hierarchie des objets dans JavaFX"/>
           <aside class="notes">
             <p>JavaFX : Hierarchie generale.</p>
             <ul>
@@ -438,7 +438,7 @@ dans le format qu'ils souhaitent</p>
           </aside>
         </section>
         <section>
-          <img src="images/algo_svg.png" alt="Explication de la fonction SVG. Elle explore recusrivement tous les enfants d'un noeud et ne rend que la hierarchie."/>
+          <img height="900" src="images/algo_svg.png" alt="Explication de la fonction SVG. Elle explore recusrivement tous les enfants d'un noeud et ne rend que la hierarchie."/>
           <aside class="notes">
             <p>Fonction recursive<br/> SI :</p>
             <ul>
@@ -448,7 +448,7 @@ dans le format qu'ils souhaitent</p>
           </aside>
         </section>
         <section>
-          <img src="images/travail_svg.png" alt="Mon travail sur le convertisseur SVG est de trouver les propri&#xE9;t&#xE9;s graphiques de JavaFX et de les appliquer au SVG"/>
+          <img height="900" src="images/travail_svg.png" alt="Mon travail sur le convertisseur SVG est de trouver les propri&#xE9;t&#xE9;s graphiques de JavaFX et de les appliquer au SVG"/>
           <aside class="notes">
             <p>MON JOB : Trouver les definitions d'elements de base manquant au convertisseur ET corriger celle qui existe deja</p>
             <p>documentation + essais =&gt; QUELLE PROPRIETE GRAPHIQUES -&gt; SVG</p>
@@ -464,7 +464,7 @@ dans le format qu'ils souhaitent</p>
           </aside>
         </section>
         <section>
-          <img src="images/explication_fxml.png" alt="Explication de ce que fait le FXML. Au lieu d'un code ou tout se m&#xE9;lange, on s&#xE9;pare la pr&#xE9;sentation du comportement"/>
+          <img height="900" src="images/explication_fxml.png" alt="Explication de ce que fait le FXML. Au lieu d'un code ou tout se m&#xE9;lange, on s&#xE9;pare la pr&#xE9;sentation du comportement"/>
           <aside class="notes">
             <p>Defining interfaces in XML, then letting JavaFX inflate them</p>
           </aside>
@@ -550,7 +550,7 @@ class SimplePane extends VBox{
           </aside>
         </section>
         <section>
-          <img src="images/customizationpanel.png" alt="Une image du panneau de customisation"/>
+          <img height="900" src="images/customizationpanel.png" alt="Une image du panneau de customisation"/>
           <!-- Custom Panel -->
           <aside class="notes">
             <p>Commente la fenetre</p>
@@ -660,7 +660,7 @@ class SimplePane extends VBox{
         <!-- Organisation -->
         <section>
           <h3>GitHub : Un precieux outil d'organisation pour l'&#xE9;quipe</h3>
-          <img src="images/issuetracker_github.png" alt="Description de l'issue tracker. Il permet de creer ce que l'on appelle des issues, d'en discuter avec les utilisateurs, de les referencer dans les commits o&#xF9; l'on fait des modifications les concernant. De cette fa&#xE7;on on suit l'avancement du projet"/>
+          <img height="900" src="images/issuetracker_github.png" alt="Description de l'issue tracker. Il permet de creer ce que l'on appelle des issues, d'en discuter avec les utilisateurs, de les referencer dans les commits o&#xF9; l'on fait des modifications les concernant. De cette fa&#xE7;on on suit l'avancement du projet"/>
           <aside class="notes">
             <p>Organisation avec Github</p>
             <ul>
